--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Sudhanshu</a>.
+      >. Coded by <a href="https://github.com/sudoofe123/Testimonials-grid-section">Sudhanshu</a>.
     </footer>
     </div>
   </body>
